manifests/dns_help.yml
apiVersion: v1
kind: Pod
metadata:
  name: curl
  namespace: kubeflow
spec:
  containers:
  - name: dnsutils
    image: curlimages/curl
    command:
      - sleep
      - "infinity"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
