manifests/min_auth.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: security.istio.io|AuthorizationPolicy|default|minio-service
  name: minio-service
  namespace: kubeflow
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/kubeflow/sa/ml-pipeline
  - from:
    - source:
        principals:
        - cluster.local/ns/kubeflow/sa/ml-pipeline-ui
  - from:
    - source:
        namespaces: ["christensenc3526"]
  selector:
    matchLabels:
      app: minio
