manifests/min_auth_allow_all.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all-minio
  namespace: kubeflow
spec:
  action: ALLOW
  rules: []
  selector:
    matchLabels:
      app: minio
